// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render PhotographyGridSection component w/ images. 1`] = `
Array [
  .c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-bottom: 8px;
  color: rgba(0,0,0,0.7);
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-family: Alegreya Sans SC;
  font-size: 48px;
}

<h2
    className="c0 flex fw5 justify-end w-100"
    color="textMediumMuted"
    fontFamily="smallcaps"
    fontSize="6"
  >
    <a
      href="/true/#"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      01 May 2019
    </a>
  </h2>,
  .c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<div
    className="c0 mb4 w-100"
    style={
      Object {
        "height": NaN,
      }
    }
  >
    <div
      style={
        Object {
          "height": NaN,
          "position": "absolute",
          "transform": "translate3d(0px,NaNpx,0)",
          "width": 0,
        }
      }
    />
    <div
      style={
        Object {
          "height": NaN,
          "position": "absolute",
          "transform": "translate3d(0px,NaNpx,0)",
          "width": 0,
        }
      }
    />
  </div>,
  .c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-bottom: 8px;
  margin-top: 32px;
}

<div
    className="c0"
    style={
      Object {
        "borderTop": "1px solid rgb(221, 221, 221)",
      }
    }
  >
     
  </div>,
]
`;

exports[`Render PhotographyGridSection component. 1`] = `
Array [
  .c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-bottom: 8px;
  color: rgba(0,0,0,0.7);
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-family: Alegreya Sans SC;
  font-size: 48px;
}

<h2
    className="c0 flex fw5 justify-end w-100"
    color="textMediumMuted"
    fontFamily="smallcaps"
    fontSize="6"
  >
    <a
      href="/true/#"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      01 May 2019
    </a>
  </h2>,
  .c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<div
    className="c0 mb4 w-100"
    style={
      Object {
        "height": 0,
      }
    }
  />,
  .c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-bottom: 8px;
  margin-top: 32px;
}

<div
    className="c0"
    style={
      Object {
        "borderTop": "1px solid rgb(221, 221, 221)",
      }
    }
  >
     
  </div>,
]
`;
